--- a/doc/customization.asciidoc
+++ b/doc/customization.asciidoc
@@ -169,8 +169,37 @@ these files not being present.
 Loaders
 -------
 
+homectl includes several loader packages by default, to help get you started and
+to ease the task of breaking up your configuration into packages.
+
 Shell (bash, zsh)
 ~~~~~~~~~~~~~~~~~
+
+The +loader-bash.hcpkg+ and +loader-zsh.hcpkg+ loaders replace your shell's
+profile and rc-files.  They are responsible for loading all the shell
+customizations (environment variables, functions, shell scripts, snazzy prompts,
+etc.) you have in your enabled homectl packages.
+
+The simplest way to customize your shell is to create an +env.sh+ or +shell.sh+
+file in your homectl package, and place your code in there.  You can also create
+a +bin/+ directory, to hold your stand-alone scripts, or even custom binaries.
+
+As the name implies, +env.sh+ is generally expected to contain environment
+variable or other settings that could apply to both interactive and
+non-interactive shells.  It should not produce any output, nor expect any input.
+It may be run even as part of shell scripts, so it's best to keep this as small
+as possible.
+
++shell.sh+, on the other hand, contains things one might use while sitting at a
+shell prompt.  This would be a good place to change your prompt, set up an
++ssh-agent+, or add shell aliases.
+
+If the loader sees a +bin/+ directory inside your package, that directory will
+be automatically added to your PATH.  Similarly, +lib/+, +lib64/+, etc. are
+added to your linker path.  This helps you to package 3rd-party programs for use
+in homectl with a minimum of fuss.
+
+
 
 Package File Reference
 ----------------------
