--- a/NEWS.asciidoc
+++ b/NEWS.asciidoc
@@ -40,6 +40,9 @@ $ hc init ~/your-home-setup    # this is not destructive, don't worry :)
 * `hc path` discovers where homectl files live, and computes updated
   environment variables such as `$PATH`.
 
+* `hc files` searches for files within hook dirs in your packages, similar to
+  how `find $hook_dirs -path ...` works.
+
 * `loader-emacs.hcpkg` loads Emacs packages directly from the new
   `emacs-startup` hook.  It uses `(require)` to ensure package dependencies are
   respected.
@@ -53,7 +56,11 @@ $ hc init ~/your-home-setup    # this is not destructive, don't worry :)
   hookdir instead.  The old behavior will be removed in homectl 0.4.
 
 * `homectl find` (or `hc find`, as it's now called) has been deprecated in favor
-  of `hc path`.
+  of `hc files`.
+
+* `loader-bash` and `loader-zsh`: The previous mechanism of sourcing `shell.*`
+  and `env.*` files during shell startup is deprecated and will be removed in
+  homectl 0.4.  Instead, place your `*.sh`, `*.bash`, or `*.zsh` files in the `shell-env` and `shell-rc` hook directories, respectively.
 
 .Bugs Fixed
 
