--- a/doc/customization.asciidoc
+++ b/doc/customization.asciidoc
@@ -104,17 +104,18 @@ profile and rc-files.  They are responsible for loading all the shell
 customizations (environment variables, functions, shell scripts, snazzy prompts,
 etc.) you have in all your enabled homectl packages.
 
-The simplest way to customize your shell is to create an +env.sh+ or +shell.sh+
-file in your homectl package, and place your code in there.  You can also create
-a +bin/+ directory, to hold your stand-alone scripts, or even custom binaries.
+The simplest way to customize your shell is to create +shell-env/*.sh+ or
++shell-rc/*.sh+ files in your homectl package, and place your code in there.
+You can also create a +bin/+ directory, to hold your stand-alone scripts, or
+even custom binaries.
 
-As the name implies, +env.sh+ is generally expected to contain environment
-variable or other settings that could apply to both interactive and
-non-interactive shells.  It should not produce any output, nor expect any input.
-It may be run even as part of shell scripts, so it's best to keep this as small
-as possible.
+As the name implies, +shell-env/*+ files are generally expected to contain
+environment variable or other settings that could apply to both interactive and
+non-interactive shells.  They should not produce any output, nor expect any
+input.  They may be run even as part of shell scripts, so it's best to keep them
+as small as possible.
 
-+shell.sh+, on the other hand, contains things one might use while sitting at a
++shell-rc/*+, on the other hand, contain things one might use while sitting at a
 shell prompt.  This would be a good place to change your prompt, set up an
 +ssh-agent+, or add shell aliases.
 
