--- a/doc/customization.asciidoc
+++ b/doc/customization.asciidoc
@@ -133,6 +133,18 @@ Files in the +common+ system can omit the +$System+ directory entirely:
 example.hcpkg/$hook/my-file.txt   # this file is in the "common" system
 --------------------------------------------------------------------------------
 
+Any system or hook whose name begins with +_+ is ignored by homectl.  So you can
+put stuff which you don't want linked into +~/.homectl+ into one of these
+directories.  Note that this does not apply to nested directories underneath
+hooks/systems; here are some examples:
+
+--------------------------------------------------------------------------------
+example.hcpkg/_data               # not linked into ~/.homectl
+example.hcpkg/foo/_data           # will be linked into ~/.homectl
+example.hcpkg/Linux/_data         # not linked
+example.hcpkg/Linux/foo/_data     # will be linked
+--------------------------------------------------------------------------------
+
 .Layout of an example homectl package
 ================================================================================
 --------------------------------------------------------------------------------
@@ -150,11 +162,15 @@ example.hcpkg/
       libfoo.so
     ...
 
+  _*/            <--- Directories matching this pattern are ignored
+
   [A-Z]*/        <--- this is what a system name looks like
     [a-z]*/      <--- this is what a hook name looks like
       ...
+    _*/          <--- A sytem-specific ignored directory
 
-  *.trigger      <--- triggers will be discussed later
+  *.trigger      <--- Trigger files will be discussed later
+  _trigger
 --------------------------------------------------------------------------------
 ================================================================================
 
@@ -344,7 +360,7 @@ this:
 --------------------------------------------------------------------------------
 $ hc tree emacs-startup '*.el'
 /home/me/.homectl/common/emacs-startup/commit-message-mode.el
- /home/me/.homectl/common/emacs-startup/graphviz-dot-mode.el ...
+/home/me/.homectl/common/emacs-startup/graphviz-dot-mode.el ...
 --------------------------------------------------------------------------------
 
 Formatting +hc path+ and +hc tree+ Output
@@ -475,18 +491,61 @@ Reference: Triggers
 If simple symlinking isn't enough to deploy a package, homectl provides a way to
 run programs when packages are enabled (actually, refreshed) or disabled.
 Triggers are always placed in the top-level package directory; they are
-currently not system-specific.
+currently not system-specific, so they should be written in such a way as to
+apply to all platforms.
+
+Triggers are run in a non-interactive context (user input is not supported),
+with the trigger name as their sole parameter (for example: +build.trigger
+build+).  They are always run from the top-level +*.hcpkg+ directory.
+
++build.trigger+::
+    Prior to symlinking the contents of a package into +~/.homectl+, the +build+
+    trigger is run.  This trigger may create generated files inside the package
+    itself, and homectl will pick up those files and symlink them.  When a
+    package is enabled, or when an already-enabled package is updated via +hc
+    refresh+, homectl will look in the top level of each package directory for a
+    file called +refresh.trigger+.  If this file exists and is executable,
+    homectl will run it after symlinking the package's files into +~/.homectl+.
 
 +refresh.trigger+::
-    When a package is enabled, or when an already-enabled package is updated via
-    +hc refresh+, homectl will look in the top level of each package directory
-    for a file called +refresh.trigger+.  If this file exists and is executable,
-    homectl will run it.
+    After a package has been symlinked into +~/.homectl+, the +refresh+ trigger
+    is run.  If +refresh.trigger+ modifies any of the files in the homectl
+    package, homectl will **not** notice this until the next time +hc refresh+
+    is run.
 
 +disable.trigger+::
-    Similarly, when a package is disabled, homectl will search for and run a
-    +disable.trigger+ executable file.
+    Before a package is disabled and unlinked from +~/.homectl+, the +disable+
+    trigger is run.
 
-At present, these triggers are run in a non-interactive context, so they should
-not expect to have access to user input.  They are called with no parameters and
-with no extra environment variables.
++clean.trigger+::
+    After a package is disabled and has been unlinked from +~/.homectl+, the
+    +clean+ trigger is run.  This is the place to remove build artifacts and do
+    general cleanup of the package directory, if required.
+
+Alternatively, if you would prefer to keep the code for all triggers within a
+single script, you can create one file called +_trigger+.  If any of the
++foo.trigger+ files listed above does not exist or is not executable, homectl
+will look for and run +_trigger+ instead.
+
+This is particularly useful if you would like to write your triggers as
+makefiles; the following skeleton is an example of how to do this:
+
+--------------------------------------------------------------------------------
+#!/usr/bin/env make -f
+
+# Put this file in the top level of your package's directory, and name it
+# "_trigger".
+
+build:
+        # Things to do prior to enabling/refreshing the package
+
+refresh:
+        # Things to do when the package has just been refreshed/enabled
+
+disable:
+        # Things to do before the package is disabled
+
+clean:
+        # Things to do to cleanup after the package is disabled
+
+--------------------------------------------------------------------------------
